Fix vertical alignment elements
ERM31967

[4.x]

--- a/resources/styles/tree.css
+++ b/resources/styles/tree.css
@@ -44,6 +44,10 @@ li > ul.tree-node-list li:last-child:before {
 }
 /* stylelint-enable unit-disallowed-list */
 
+#menuEditor-container .oojsplus-data-tree-expander .oo-ui-iconElement-icon {
+	opacity: 0.6;
+}
+
 #mw-content-text .oojsplus-data-tree-label a .oo-ui-iconElement-icon {
 	opacity: 0.2;
 }
@@ -120,7 +124,7 @@ li > ul.tree-node-list li:last-child:before {
 }
 
 #menuEditor-container .oojsplus-data-tree-label {
-	margin-left: 2px;
+	margin-left: 5px;
 }
 
 #menuEditor-container .oojs-ui-data-tree-item {
@@ -132,6 +136,7 @@ li > ul.tree-node-list li:last-child:before {
 	top: 0;
 	margin-top: 0;
 	height: 2.3rem;
+	margin-left: 20px;
 }
 /* stylelint-enable unit-disallowed-list */
 
@@ -142,5 +147,6 @@ li > ul.tree-node-list li:last-child:before {
 
 #menuEditor-container .oojsplus-data-tree-expander + div {
 	margin-bottom: 10px;
+	padding-left: 20px;
 }
 /* stylelint-enable selector-max-id */
